objects/Legacy_Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <label>Actual Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Request</label>
        <referenceTo>Pricing_Request__c</referenceTo>
        <relationshipLabel>Legacy Approval History</relationshipLabel>
        <relationshipName>Legacy_Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <label>Source Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Name__c</fullName>
        <label>Step Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Legacy Approval History</label>
    <nameField>
        <label>Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Approval History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>